# CS-5330-Pattern-Recognition-and-Computer-Vision

./: .gitignore  404.html  Assignment1.cpp  Assignment1.sln  CMakeLists.txt  README.md  index.html  main.cpp  mkdocs.yml  requirements-docs.txt  sitemap.xml
.github/workflows/: deploy-docs.yml
Assignment1/: helper.cpp  imageFilters.cpp
Assignment1/Assignment1/: .gitignore  .gitignore.bak  README.md
Assignment1/include/: helper.h  imageFilters.h
Assignment1/src/: imgDisplay.cpp  test.cpp  vidDisplay.cpp
Assignment2/Assignment2/: README.md
Assignment3/RT2DOR/: README.md
Assignment4/: cameraParams.csv
Assignment4/CameraCalibrationAndAR/: README.md  features  main  makefile  project
Assignment5/CharacterRecognition/: README.md
Assignment5/models/: base_model.pth  base_optimizer.pth  final_model.pth  model_extended_greek.pth  model_greek.pth  optim_extended_greek.pth  optim_greek.pth
Assignment5/src/: explore_cnn.py  extended_greek.py  extended_greek_testing.py  (+15 more)
FinalProject/: Readme.md
camera-calibration-ar/: index.html
character-recognition/: index.html
docs/: README.md  camera-calibration-ar.md  character-recognition.md  image-retrieval.md  index.md  object-recognition.md  real-time-filtering.md
image-retrieval/: index.html
include/: additionalEffects.h  extensions.h  filters.h  imageFilters.h  utils.h
notes/: notes.cpp
object-recognition/: index.html
real-time-filtering/: index.html
search/: search_index.json
src/: dummy.cpp  extTest.cpp  extensions.cpp  filters.cpp  imageFilters.cpp  imgDisplay.cpp  test.cpp  vidDisplay.cpp
(+94 files in other folders)
